# cwscs

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: packaging.yaml
src/cwscs/: auction.py  lot.py  reporting.py  search.py  storage.py  webpage.py
tests/: test_storage.py  test_webpage.py
