[metadata]
name = cwscs
version = 0.0.1
description = Package to work with data from CataWiki.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
author = datatrail
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    requests>=2,<3

[options.packages.find]
where = src
exclude =
    test*

######################
# Tool configuration #
######################

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120

[coverage:run]
source = cwscs
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/cwscs
    */site-packages/cwscs

[tox:tox]
envlist = py310
isolated_build = True

[testimports]
deps =
    pytest
    pytest-cov

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs}

[testenv:typecheck]
deps =
    mypy
    pytest
    types-requests
commands =
    mypy --ignore-missing-imports {posargs:src tests}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src tests}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src tests}